# tic-tac-toe

./: CMakeLists.txt  README.md
client/: CClient.hpp  CInPacket.hpp  CMakeLists.txt  COutPacket.hpp  CPacket.hpp  ChatRender.hpp  Game.hpp  GridCell.hpp  GridRender.hpp  GridTextures.hpp  ITcpUser.hpp  Menu.hpp  MenuItem.hpp  NetworkClient.hpp  NetworkPackets.hpp  OnlineRender.hpp  RenderLayer.hpp  StringMenuItem.hpp  Wait.hpp  main.cpp  resources.hpp
server/: CGame.hpp  CGrid.hpp  CInPacket.hpp  CMakeLists.txt  COutPacket.hpp  CPacket.hpp  CPlayer.hpp  CPlayers.hpp  ITcpUser.hpp  main.cpp  shared_container.hpp  shared_memory.hpp
